methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:3: error: unclosed character literal
  var couleur:String='Color.blanc'
                                 ^SlugTracking:11: error: unclosed character literal
  if (couleur=='Color.green'){
                           ^SlugTracking:3: error: ';' expected but something found.
  var couleur:String='Color.blanc'
                                 ^SlugTracking:11: error: ')' expected but something found.
  if (couleur=='Color.green'){
                           ^